adjust navigation order, prevent layout shift

--- a/frontend/app/components/Navigation/navigation.module.scss
+++ b/frontend/app/components/Navigation/navigation.module.scss
@@ -49,6 +49,7 @@
       &:last-child {
         position: absolute;
         right: 0;
+        top: 0;
         @media screen and (max-width: 800px) {
           position: static;
         }
