--- a/frontend/app/stories/article.module.scss
+++ b/frontend/app/stories/article.module.scss
@@ -29,10 +29,6 @@
     max-width: 45rem;
   }
 
-  figcaption {
-    text-align: center;
-  }
-
   @media screen and (max-width: 800px) {
     p {
       font-size: 1rem;
@@ -160,15 +156,24 @@
   max-width: 45rem;
   margin: 3rem auto;
 
-  img {
-    width: auto;
+  a {
+    display: block;
+  }
+
+  div {
     max-height: 80vh;
-    max-width: 100%;
-    height: auto;
+    overflow: hidden;
     margin: 0 auto;
+
     @media screen and (max-width: 800px) {
       max-height: 40rem;
     }
+  }
+
+  img {
+    display: block;
+    width: 100%;
+    height: auto;
   }
 }
 
